@@ -50,7 +50,7 @@
                   "function": "minecraft:explosion_decay"
                 }
               ],
-              "name": "rftoolsbase:dimensionalshard_end"
+              "name": "rftoolsbase:dimensionalshard"
             }
           ]
         }
